# open-canoe

./: .gitignore  APP Requirements document.md  CLAUDE.md  DESIGN.md  README.md  REQUIREMENTS.md  Requirements document.md  deploy.bat  pyproject.toml  settings.yaml  test_gui_full.py  test_ui_controls.py
.claude/: settings.local.json
app/: main.py  requirements.txt
app/test/: test_mock_integration.py
canoe/: __init__.py
canoe/config/: defaults.yaml  settings.py
canoe/core/: models.py  protocol.py  transport.py
canoe/gui/: app.py  config.py  detail_panel.py  device_bar.py  lang.py  log_panel.py  message_table.py  send_panel.py  waveform_window.py
doc/: README.md  REQUIREMENTS.md  SPECIFICATION.md
firmware/: Makefile.f103  Makefile.f407  Makefile_f103  Makefile_f407
firmware/build_f103/: adc_driver.d  adc_driver.lst  can_driver.d  can_driver.lst  comm_driver.d  comm_driver.lst  device_manager.d  device_manager.lst  main.d  main.lst  open_canoe_f103.elf  open_canoe_f103.hex  open_canoe_f103.map  protocol_handler.d  protocol_handler.lst  startup_stm32f103xb.d  stm32f1xx_hal.d  stm32f1xx_hal.lst  stm32f1xx_hal_adc.d  stm32f1xx_hal_adc.lst  stm32f1xx_hal_can.d  stm32f1xx_hal_can.lst  stm32f1xx_hal_cortex.d  stm32f1xx_hal_cortex.lst  stm32f1xx_hal_dma.d  stm32f1xx_hal_dma.lst  (+29 more)
open-canoe/: main.py  pyproject.toml
scripts/: deploy.py  test_app.py
test/: test_app.py  test_gui_full.py  test_hardware.py  test_protocol.py  test_ui_controls.py
tools/: build.py  clean.bat  clean.py  deploy.bat  deploy.py  send_cmd.py  test_final.py  test_pyserial.py
(+69 files in other folders)
