[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canoe"
version = "0.2.0"
description = "Open CAN bus analyzer with STM32 hardware probe"
readme = "README.md"
license = { text = "TBD" }
requires-python = ">=3.11"
keywords = ["can", "can-bus", "automotive", "embedded", "stm32"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pyserial>=3.5",
    "pydantic>=2.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.0",
]

[project.scripts]
canoe = "main:main"

[tool.setuptools.packages.find]
include = ["canoe*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
